# ml-pepr

./: .buildinfo  .dockerignore  .gitignore  Dockerfile-doc  Dockerfile-tf-cpu  Dockerfile-tf-gpu  LICENSE  README.md  README.rst  art_extraction_wrapper.html  art_inference_wrapper.html  art_wrapper.html  attack_runner.html  foolbox_wrapper.html  genindex.html  gmia.html  index.html  mia.html  objects.inv  privacy_attacks.html  py-modindex.html  pypiREADME.rst  quick_start_guide.html  requirements.txt  robustness_attacks.html  search.html  searchindex.js  setup.cfg  setup.py  utilities.html
.github/workflows/: docs_pages_workflow.yml  publish_pypi_workflow.yml
_sources/: index.rst.txt  privacy_attacks.rst.txt  robustness_attacks.rst.txt
docs/: buildDocs.sh
docs/source/: art_extraction_wrapper.rst  art_inference_wrapper.rst  art_wrapper.rst  attack_runner.rst  changelog.rst  conf.py  foolbox_wrapper.rst  gmia.rst  index.rst  installation.rst  mia.rst  privacy_attacks.rst  quick_start_guide.rst  robustness_attacks.rst  utilities.rst
notebooks/: art_tutorial.ipynb  direct_gmia_tutorial.ipynb  direct_mia_tutorial.ipynb  foolbox_tutorial.ipynb  mia_example.ipynb  mia_tutorial.ipynb
notebooks/attack_runner_tutorial/: attack_runner_config.yml  attack_runner_tutorial.ipynb
pa/: gmia.py
pepr/: attack.py  attack_runner.py  report.py  utilities.py
pepr/privacy/: art_extraction_wrapper.py  art_inference_wrapper.py  gmia.py  mia.py
pepr/robustness/: art_wrapper.py  foolbox_wrapper.py
tests/integration/: test_gmia_fashion_mnist.py
tests/unit/: test_pepr_privacy_gmia.py  test_pepr_privacy_mia.py
