[metadata]
name = mlpepr
version = 0.1b2
author = University of Luebeck: ITS KI-Lab Group
author_email = jonas.sander@t-online.de
description = PePR is a library for pentesting the privacy risk and robustness of machine learning models.
long_description = file: pypiREADME.rst
long_description_content_type = text/x-rst
url = https://github.com/hallojs/ml-pepr
project_urls =
    Bug Tracker = https://github.com/hallojs/ml-pepr/issues
    Documentation = https://hallojs.github.io/ml-pepr/
license = GPL
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    PyLaTeX
    pyyaml
    scikit-learn
    scipy
    statsmodels
    tensorflow
    foolbox

[options.packages.find]
where = .
exclude = tests